2014-04-30  Simon Fraser  <simon.fraser@apple.com>

        Make sure the "All" targets build WebKitLegacy, rather than WebKit.
        
        Reviewed by Dan Bernstein/Anders Carlsson.

        * WebKit.xcworkspace/xcshareddata/xcschemes/All Source (target WebProcess).xcscheme:
        * WebKit.xcworkspace/xcshareddata/xcschemes/All Source.xcscheme:

2014-04-30  Simon Fraser  <simon.fraser@apple.com>

        Let Xcode have its way with the WebKit workspace.

        * WebKit.xcworkspace/xcshareddata/xcschemes/All Source (target WebProcess).xcscheme:
        * WebKit.xcworkspace/xcshareddata/xcschemes/All Source.xcscheme:

2014-04-29  Martin Robinson  <mrobinson@igalia.com>

        [GTK] Make it easier to run CMake for downstreams
        https://bugs.webkit.org/show_bug.cgi?id=132370

        Reviewed by Carlos Garcia Campos.

        * Source/cmake/OptionsGTK.cmake: Turn PRODUCTION_MODE into DEVELOPER_MODE.

2014-04-27  Joonghun Park  <jh718.park@samsung.com>

        [EFL] Remove indexedDB's dependency on leveldb and disable indexedDB
        https://bugs.webkit.org/show_bug.cgi?id=132176

        Reviewed by Gyuyoung Kim.

        EFL port will use sqlite to support indexedDB. So, this patch removes levelDB dependency for now.

        * Source/cmake/OptionsEfl.cmake:

2014-04-22  Alex Christensen  <achristensen@webkit.org>

        Removed old stdbool and inttypes headers.
        https://bugs.webkit.org/show_bug.cgi?id=131966

        Reviewed by Brent Fulgham.

        * Source/cmake/OptionsWindows.cmake:
        * Source/cmake/WebKitPackaging.cmake:
        Removed references to os-win32 directory.        

2014-04-22  Zan Dobersek  <zdobersek@igalia.com>

        Fix a typo in WebKitFeatures.cmake -- INITALVALUE -> INITIALVALUE.

        Rubber-stamped by Carlos Garcia Campos.

        * Source/cmake/WebKitFeatures.cmake:

2014-04-18  Jon Honeycutt  <jhoneycutt@apple.com>

        Empty RenderInline objects should not be line break objects.
