@@ -89,7 +89,6 @@
 #cmakedefine01 ENABLE_ORIENTATION_EVENTS
 #cmakedefine01 ENABLE_PAGE_VISIBILITY_API
 #cmakedefine01 ENABLE_PERFORMANCE_TIMELINE
-#cmakedefine01 ENABLE_PLUGIN_PROXY_FOR_VIDEO
 #cmakedefine01 ENABLE_PROGRESS_ELEMENT
 #cmakedefine01 ENABLE_PROMISES
 #cmakedefine01 ENABLE_PROXIMITY_EVENTS
